added shapiro, kruskal, and manova statistics, descriptives about tap and block detection

--- a/updrsTapping_exploring_features.ipynb
+++ b/updrsTapping_exploring_features.ipynb
@@ -242,22 +242,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 560,
+   "execution_count": 579,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "dict_keys(['triax_arr', 'fs', 'impacts', 'tapDict', 'updrsSubScore', 'nTaps', 'freq', 'tap_durations', 'intraTapInt', 'tapRMS', 'tapRMSnrm', 'impactRMS', 'raise_velocity', 'jerkiness', 'jerkiness_smooth', 'mean_tapRMSnrm', 'coefVar_tapRMSnrm', 'IQR_tapRMSnrm', 'decr_tapRMSnrm', 'slope_tapRMSnrm', 'mean_raise_velocity', 'coefVar_raise_velocity', 'IQR_raise_velocity', 'decr_raise_velocity', 'slope_raise_velocity', 'mean_intraTapInt', 'coefVar_intraTapInt', 'IQR_intraTapInt', 'decr_intraTapInt', 'slope_intraTapInt', 'mean_jerkiness', 'coefVar_jerkiness', 'IQR_jerkiness', 'decr_jerkiness', 'slope_jerkiness', 'mean_jerkiness_smooth', 'coefVar_jerkiness_smooth', 'IQR_jerkiness_smooth', 'decr_jerkiness_smooth', 'slope_jerkiness_smooth'])"
-      ]
-     },
-     "execution_count": 560,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['sub', 'state', 'side', 'rep', 'center', 'filepath', 'tap_score', 'goal_Fs', 'to_extract_feats', 'acc_sig', 'fs', 'impact_idx', 'fts'])\n",
+      "45\n"
+     ]
     }
    ],
    "source": [
-    "vars(ftClass.BER033_M0S1_R_2.fts).keys()\n"
+    "print(vars(ftClass.BER033_M0S1_R_2).keys())\n",
+    "print(ftClass.BER033_M0S1_R_2.fts.nTaps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 587,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BER023_M1S0_R_3\n",
+      "DUS022_M0S0_L_1\n",
+      "DUS006_M0S0_L_1\n",
+      "\n",
+      "UPDRS subscores: (array([0, 1, 2, 3, 4]), array([ 41, 151, 120,  59,   5], dtype=int64))\n",
+      "In 37 unique subjects, 376 tap blocks found\n",
+      "block durations: 11.801747989276139 +/- 2.5109399563989436\n",
+      "n taps: 29.50402144772118 +/- 13.069133967035977\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(vars(ftClass.BER033_M0S1_R_2.fts).keys())\n",
+    "# 21 blocks false positive, missed 1\n",
+    "# blocks without taps\n",
+    "\n",
+    "block_durations = []\n",
+    "ntaps = []\n",
+    "subs = []\n",
+    "scores = []\n",
+    "\n",
+    "for trace in ftClass.incl_traces:\n",
+    "    subs.append(getattr(ftClass, trace).sub)\n",
+    "    scores.append(getattr(ftClass, trace).tap_score)\n",
+    "\n",
+    "    try:\n",
+    "        ntaps.append(getattr(ftClass, trace).fts.nTaps)\n",
+    "        block_durations.append(getattr(ftClass, trace).acc_sig.shape[1] / 250)\n",
+    "        \n",
+    "    except AttributeError:\n",
+    "        print(trace)\n",
+    "print()\n",
+    "print(f'UPDRS subscores: {np.unique(scores, return_counts=True)}')\n",
+    "print(f'In {len(np.unique(subs))} unique subjects, {len(ftClass.incl_traces)} tap blocks found')\n",
+    "print(f'block durations: {np.mean(block_durations)} +/- {np.std(block_durations)}')\n",
+    "print(f'n taps: {np.mean(ntaps)} +/- {np.std(ntaps)}')"
    ]
   },
   {
