--- a/updrsTapping_predictions.ipynb
+++ b/updrsTapping_predictions.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -292,21 +292,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### MANOVA"
+    "#### MANOVA\n",
+    "\n",
+    "- normality assumption violated (shapiro highly significant)\n",
+    "- every feature vs sub-score is a Kruskal-Wallis test (non-parametric One-Way ANOVA alternative)\n",
+    "- in total: correct alpha for repeated measures"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from statsmodels.multivariate.manova import MANOVA\n"
+    "from scipy.stats import shapiro\n",
+    "for col in np.arange(X.shape[1]):\n",
+    "    print(feats[col], shapiro(X[:, col]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -319,46 +325,36 @@
       "--------------------------------------------------------------\n",
       "       Intercept        Value  Num DF  Den DF  F Value  Pr > F\n",
       "--------------------------------------------------------------\n",
-      "          Wilks' lambda 0.3111 4.0000 368.0000 203.7504 0.0000\n",
-      "         Pillai's trace 0.6889 4.0000 368.0000 203.7504 0.0000\n",
-      " Hotelling-Lawley trace 2.2147 4.0000 368.0000 203.7504 0.0000\n",
-      "    Roy's greatest root 2.2147 4.0000 368.0000 203.7504 0.0000\n",
+      "          Wilks' lambda 0.1239 7.0000 365.0000 368.6918 0.0000\n",
+      "         Pillai's trace 0.8761 7.0000 365.0000 368.6918 0.0000\n",
+      " Hotelling-Lawley trace 7.0708 7.0000 365.0000 368.6918 0.0000\n",
+      "    Roy's greatest root 7.0708 7.0000 365.0000 368.6918 0.0000\n",
       "--------------------------------------------------------------\n",
       "                                                              \n",
       "--------------------------------------------------------------\n",
       "         subscore        Value  Num DF  Den DF  F Value Pr > F\n",
       "--------------------------------------------------------------\n",
-      "           Wilks' lambda 0.7933 4.0000 368.0000 23.9726 0.0000\n",
-      "          Pillai's trace 0.2067 4.0000 368.0000 23.9726 0.0000\n",
-      "  Hotelling-Lawley trace 0.2606 4.0000 368.0000 23.9726 0.0000\n",
-      "     Roy's greatest root 0.2606 4.0000 368.0000 23.9726 0.0000\n",
+      "           Wilks' lambda 0.7803 7.0000 365.0000 14.6821 0.0000\n",
+      "          Pillai's trace 0.2197 7.0000 365.0000 14.6821 0.0000\n",
+      "  Hotelling-Lawley trace 0.2816 7.0000 365.0000 14.6821 0.0000\n",
+      "     Roy's greatest root 0.2816 7.0000 365.0000 14.6821 0.0000\n",
       "==============================================================\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "X, y = prep_pred.create_X_y_vectors(\n",
-    "    ftClass,\n",
-    "    incl_traces=traces,\n",
-    "    incl_feats=feats,\n",
-    "    to_norm=False,\n",
-    ")\n",
+    "from statsmodels.multivariate.manova import MANOVA\n",
     "\n",
-    "# UPDRS 4 -> 3 merge\n",
-    "mask = y == 4\n",
-    "y[mask] = 3\n",
-    "# UPDRS 0 -> 1 merge\n",
-    "mask = y == 0\n",
-    "y[mask] = 1\n",
-    "\n",
+    "stat_data = np.concatenate([X, y.reshape((len(y), 1))], axis=1)\n",
     "manova_df = pd.DataFrame(\n",
-    "    data=np.concatenate([X, y.reshape((len(y), 1))], axis=1),\n",
+    "    data=stat_data,\n",
     "    columns=feats + ['subscore'],\n",
     ")\n",
     "maov = MANOVA.from_formula(\n",
-    "    'nTaps + coefVar_intraTapInt + mean_raise_velocity +'\n",
-    "    'mean_tapRMSnrm ~ subscore ',\n",
+    "    'nTaps + freq + mean_intraTapInt + coefVar_intraTapInt + IQR_jerkiness +'\n",
+    "    ' mean_raise_velocity + mean_tapRMSnrm ~ subscore ',\n",
+    "    # 'mean_jerkiness_smooth + IQR_jerkiness_smooth ~ subscore',\n",
     "    data=manova_df,\n",
     ")\n",
     "print(maov.mv_test())"
@@ -366,10 +362,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "freq: sign. difference between groups is True (p = 6.9e-05)\n",
+      "coefVar_intraTapInt: sign. difference between groups is True (p = 0.0)\n",
+      "mean_jerkiness: sign. difference between groups is False (p = 0.589436)\n",
+      "coefVar_jerkiness: sign. difference between groups is False (p = 0.33741)\n",
+      "mean_tapRMSnrm: sign. difference between groups is True (p = 7e-06)\n",
+      "coefVar_tapRMSnrm: sign. difference between groups is True (p = 2.6e-05)\n",
+      "slope_tapRMSnrm: sign. difference between groups is True (p = 1e-06)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import kruskal\n",
+    "importlib.reload(prep_pred)\n",
+    "\n",
+    "traces, feats = prep_pred.select_traces_and_feats(\n",
+    "    ftClass,\n",
+    "    center=center_incl,\n",
+    "    use_sel_fts=sel_feats,\n",
+    ")\n",
+    "X, y = prep_pred.create_X_y_vectors(\n",
+    "    ftClass,\n",
+    "    incl_traces=traces,\n",
+    "    incl_feats=feats,\n",
+    "    to_norm=False,\n",
+    ")\n",
+    "\n",
+    "# # UPDRS 4 -> 3 merge\n",
+    "# mask = y == 4\n",
+    "# y[mask] = 3\n",
+    "# # UPDRS 0 -> 1 merge\n",
+    "# mask = y == 0\n",
+    "# y[mask] = 1\n",
+    "\n",
+    "stat_data = np.concatenate([X, y.reshape((len(y), 1))], axis=1)\n",
+    "stat_df = pd.DataFrame(\n",
+    "    data=stat_data,\n",
+    "    columns=feats + ['subscore'],\n",
+    ")\n",
+    "\n",
+    "stat_fts = [\n",
+    "    'freq', 'coefVar_intraTapInt', 'mean_jerkiness', 'coefVar_jerkiness',\n",
+    "    'mean_tapRMSnrm', 'coefVar_tapRMSnrm', 'slope_tapRMSnrm'\n",
+    "]\n",
+    "alpha = .05 / len(stat_fts)\n",
+    "for ft in stat_fts:\n",
+    "    tempft = stat_df[~np.isnan(stat_df[ft])]\n",
+    "\n",
+    "    groups = [\n",
+    "        tempft[ft][tempft['subscore'] == s].reset_index(drop=True)\n",
+    "        for s in np.arange(5)\n",
+    "    ]\n",
+    "    krusk_stat, krusk_p = kruskal(\n",
+    "        groups[0], groups[1], groups[2], \n",
+    "        groups[3], groups[4]\n",
+    "    )\n",
+    "    print(f'{ft}: sign. difference between groups '\n",
+    "        f'is {krusk_p < alpha} (p = {np.round(krusk_p, 6)})')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0071428571428571435"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    ".05 / 7"
+   ]
   },
   {
    "cell_type": "code",
