added mann whitney u testing

--- a/updrsTapping_predictions.ipynb
+++ b/updrsTapping_predictions.ipynb
@@ -294,9 +294,10 @@
    "source": [
     "#### MANOVA\n",
     "\n",
-    "- normality assumption violated (shapiro highly significant)\n",
-    "- every feature vs sub-score is a Kruskal-Wallis test (non-parametric One-Way ANOVA alternative)\n",
-    "- in total: correct alpha for repeated measures"
+    "- normality assumption violated (Shapiro test highly significant)\n",
+    "- for every a priori selected feature: present difference between sub-score-groups is a Kruskal-Wallis test (non-parametric One-Way ANOVA alternative)\n",
+    "- differences between two sub groups within a feature is a non-parametric test of two groups of quantitative values (likely varying lengths): Mann-Whitney-U\n",
+    "- in total: correct alpha for number of repeated measures on specific level"
    ]
   },
   {
@@ -362,26 +363,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "freq: sign. difference between groups is True (p = 6.9e-05)\n",
-      "coefVar_intraTapInt: sign. difference between groups is True (p = 0.0)\n",
-      "mean_jerkiness: sign. difference between groups is False (p = 0.589436)\n",
-      "coefVar_jerkiness: sign. difference between groups is False (p = 0.33741)\n",
-      "mean_tapRMSnrm: sign. difference between groups is True (p = 7e-06)\n",
-      "coefVar_tapRMSnrm: sign. difference between groups is True (p = 2.6e-05)\n",
-      "slope_tapRMSnrm: sign. difference between groups is True (p = 1e-06)\n"
+      "\n",
+      "freq: \n",
+      "\tGroup level sign. difference (Kruskal Test): True (p = 3.8e-05)\n",
+      "\n",
+      "\tupdrs 0 vs 1 sign, (Spearman): False (p = 0.485159)\n",
+      "\tupdrs 1 vs 2 sign, (Spearman): True (p = 0.00025)\n",
+      "\n",
+      "coefVar_intraTapInt: \n",
+      "\tGroup level sign. difference (Kruskal Test): True (p = 0.0)\n",
+      "\n",
+      "\tupdrs 0 vs 1 sign, (Spearman): False (p = 0.084536)\n",
+      "\tupdrs 1 vs 2 sign, (Spearman): True (p = 4.8e-05)\n",
+      "\n",
+      "mean_jerkiness: \n",
+      "\tGroup level sign. difference (Kruskal Test): False (p = 0.331604)\n",
+      "\n",
+      "\tupdrs 0 vs 1 sign, (Spearman): False (p = 0.375883)\n",
+      "\tupdrs 1 vs 2 sign, (Spearman): False (p = 0.140139)\n",
+      "\n",
+      "coefVar_jerkiness: \n",
+      "\tGroup level sign. difference (Kruskal Test): False (p = 0.719329)\n",
+      "\n",
+      "\tupdrs 0 vs 1 sign, (Spearman): False (p = 0.507749)\n",
+      "\tupdrs 1 vs 2 sign, (Spearman): False (p = 0.490786)\n",
+      "\n",
+      "mean_tapRMSnrm: \n",
+      "\tGroup level sign. difference (Kruskal Test): True (p = 3e-06)\n",
+      "\n",
+      "\tupdrs 0 vs 1 sign, (Spearman): False (p = 0.017736)\n",
+      "\tupdrs 1 vs 2 sign, (Spearman): True (p = 0.00162)\n",
+      "\n",
+      "coefVar_tapRMSnrm: \n",
+      "\tGroup level sign. difference (Kruskal Test): True (p = 3e-06)\n",
+      "\n",
+      "\tupdrs 0 vs 1 sign, (Spearman): False (p = 0.417794)\n",
+      "\tupdrs 1 vs 2 sign, (Spearman): True (p = 4e-06)\n",
+      "\n",
+      "slope_tapRMSnrm: \n",
+      "\tGroup level sign. difference (Kruskal Test): True (p = 1e-06)\n",
+      "\n",
+      "\tupdrs 0 vs 1 sign, (Spearman): False (p = 0.012758)\n",
+      "\tupdrs 1 vs 2 sign, (Spearman): True (p = 0.000827)\n"
      ]
     }
    ],
    "source": [
     "from scipy.stats import kruskal\n",
     "importlib.reload(prep_pred)\n",
+    "\n",
+    "mask_scores = True\n",
     "\n",
     "traces, feats = prep_pred.select_traces_and_feats(\n",
     "    ftClass,\n",
@@ -394,13 +432,16 @@
     "    incl_feats=feats,\n",
     "    to_norm=False,\n",
     ")\n",
+    "n_groups = 5\n",
+    "if mask_scores:\n",
+    "    # UPDRS 4 -> 3 merge\n",
+    "    mask = y == 4\n",
+    "    y[mask] = 3\n",
+    "    # UPDRS 0 -> 1 merge\n",
+    "    mask = y == 0\n",
+    "    y[mask] = 1\n",
     "\n",
-    "# # UPDRS 4 -> 3 merge\n",
-    "# mask = y == 4\n",
-    "# y[mask] = 3\n",
-    "# # UPDRS 0 -> 1 merge\n",
-    "# mask = y == 0\n",
-    "# y[mask] = 1\n",
+    "    n_groups = 3\n",
     "\n",
     "stat_data = np.concatenate([X, y.reshape((len(y), 1))], axis=1)\n",
     "stat_df = pd.DataFrame(\n",
@@ -416,36 +457,40 @@
     "for ft in stat_fts:\n",
     "    tempft = stat_df[~np.isnan(stat_df[ft])]\n",
     "\n",
-    "    groups = [\n",
-    "        tempft[ft][tempft['subscore'] == s].reset_index(drop=True)\n",
-    "        for s in np.arange(5)\n",
-    "    ]\n",
-    "    krusk_stat, krusk_p = kruskal(\n",
-    "        groups[0], groups[1], groups[2], \n",
-    "        groups[3], groups[4]\n",
-    "    )\n",
-    "    print(f'{ft}: sign. difference between groups '\n",
-    "        f'is {krusk_p < alpha} (p = {np.round(krusk_p, 6)})')\n"
+    "    \n",
+    "    if mask_scores:\n",
+    "        groups = [\n",
+    "            tempft[ft][tempft['subscore'] == s].reset_index(drop=True)\n",
+    "            for s in np.arange(1, n_groups + 1)\n",
+    "        ]\n",
+    "        krusk_stat, krusk_p = kruskal(\n",
+    "            groups[0], groups[1], groups[2], \n",
+    "        )\n",
+    "    else:\n",
+    "        groups = [\n",
+    "            tempft[ft][tempft['subscore'] == s].reset_index(drop=True)\n",
+    "            for s in np.arange(n_groups)\n",
+    "        ]\n",
+    "        krusk_stat, krusk_p = kruskal(\n",
+    "            groups[0], groups[1], groups[2], \n",
+    "            groups[3], groups[4]\n",
+    "        )\n",
+    "    print(f'\\n{ft}: \\n\\tGroup level sign. difference (Kruskal'\n",
+    "        f' Test): {krusk_p < alpha} (p = {np.round(krusk_p, 6)})\\n')\n",
+    "    for g in np.arange(n_groups - 1):\n",
+    "\n",
+    "        mnwu_rho, mnwu_p = mannwhitneyu(groups[g], groups[g + 1])\n",
+    "        print(f'\\tupdrs {g} vs {g + 1} sign, (Mann-Whitney-U): '\n",
+    "            f'{mnwu_p < (alpha / (n_groups - 1))} (p = {np.round(mnwu_p, 6)})')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0071428571428571435"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    ".05 / 7"
+    "from scipy.stats import mannwhitneyu"
    ]
   },
   {
