--- a/updrsTapping_predictions.ipynb
+++ b/updrsTapping_predictions.ipynb
@@ -96,18 +96,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# own functions\n",
     "from retap_utils import utils_dataManagement\n",
-    "from tap_extract_fts.main_featExtractionClass import FeatureSet, singleTrace  # for loading of class\n"
+    "from tap_extract_fts.main_featExtractionClass import FeatureSet, singleTrace  # for loading of class\n",
+    "\n",
+    "import tap_predict.tap_pred_prepare as prep_pred\n",
+    "import tap_plotting.retap_plot_clusters as plotClusters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +153,7 @@
        "dict_keys(['triax_arr', 'fs', 'impacts', 'tapDict', 'updrsSubScore', 'nTaps', 'freq', 'tap_durations', 'intraTapInt', 'tapRMS', 'tapRMSnrm', 'impactRMS', 'raise_velocity', 'jerkiness', 'jerkiness_smooth', 'mean_tapRMSnrm', 'coefVar_tapRMSnrm', 'IQR_tapRMSnrm', 'decr_tapRMSnrm', 'slope_tapRMSnrm', 'mean_raise_velocity', 'coefVar_raise_velocity', 'IQR_raise_velocity', 'decr_raise_velocity', 'slope_raise_velocity', 'mean_intraTapInt', 'coefVar_intraTapInt', 'IQR_intraTapInt', 'decr_intraTapInt', 'slope_intraTapInt', 'mean_jerkiness', 'coefVar_jerkiness', 'IQR_jerkiness', 'decr_jerkiness', 'slope_jerkiness', 'mean_jerkiness_smooth', 'coefVar_jerkiness_smooth', 'IQR_jerkiness_smooth', 'decr_jerkiness_smooth', 'slope_jerkiness_smooth'])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,20 +164,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "traces, feats = prep_pred.select_traces_and_feats(\n",
     "    ftClass,\n",
-    "    center='ber',\n",
+    "    center='all',\n",
     "    use_sel_fts=True,\n",
     ")\n",
     "X, y = prep_pred.create_X_y_vectors(\n",
     "    ftClass,\n",
     "    incl_traces=traces,\n",
     "    incl_feats=feats,\n",
-    "    to_norm=True,\n",
+    "    to_norm=False,\n",
     ")"
    ]
   },
@@ -210,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,10 +228,7 @@
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import tap_predict.tap_pred_prepare as prep_pred\n",
-    "import tap_plotting.retap_plot_clusters as plotClusters"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -511,27 +511,24 @@
     "y[mask] = 3\n",
     "# UPDRS 0 -> 1 merge\n",
     "mask = y == 0\n",
-    "y[mask] = 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "y[mask] = 1\n",
     "### 3c. Classification"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "\n",
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis as LDA\n",
     "\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import multilabel_confusion_matrix"
@@ -546,9 +543,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(373, 12)\n",
+      "0.19776827012025905\n",
+      "[0.17021277 0.14893617 0.21276596 0.21276596 0.19148936 0.15217391\n",
+      " 0.13043478 0.2173913  0.14893617 0.08510638 0.17021277 0.23404255\n",
+      " 0.17021277 0.30434783 0.23913043 0.2826087  0.14893617 0.25531915\n",
+      " 0.12765957 0.17021277 0.19148936 0.17391304 0.2173913  0.10869565\n",
+      " 0.27659574 0.12765957 0.21276596 0.17021277 0.29787234 0.26086957\n",
+      " 0.06521739 0.19565217 0.25531915 0.19148936 0.29787234 0.23404255\n",
+      " 0.19148936 0.17391304 0.17391304 0.13043478 0.17021277 0.23404255\n",
+      " 0.23404255 0.29787234 0.19148936 0.13043478 0.19565217 0.26086957\n",
+      " 0.14893617 0.21276596 0.31914894 0.25531915 0.10638298 0.15217391\n",
+      " 0.17391304 0.23913043 0.21276596 0.21276596 0.14893617 0.25531915\n",
+      " 0.27659574 0.15217391 0.17391304 0.13043478 0.21276596 0.19148936\n",
+      " 0.29787234 0.19148936 0.19148936 0.08695652 0.23913043 0.26086957\n",
+      " 0.19148936 0.23404255 0.27659574 0.14893617 0.10638298 0.19565217\n",
+      " 0.2173913  0.17391304]\n"
+     ]
+    }
+   ],
    "source": [
     "traces, feats = prep_pred.select_traces_and_feats(\n",
     "    ftClass,\n",
@@ -560,7 +580,33 @@
     "    incl_traces=traces,\n",
     "    incl_feats=feats,\n",
     "    to_norm=False,\n",
-    ")"
+    ")\n",
+    "print(X.shape)\n",
+    "\n",
+    "# use random outcome labels (equal distribution over scores)\n",
+    "random_y = np.random.randint(0, 5, size=X.shape[0])\n",
+    "y = random_y\n",
+    "# use shuffled outcome labels (same distribution)\n",
+    "np.random.seed(27)\n",
+    "# np.random.shuffle(y)\n",
+    "\n",
+    "# UPDRS 4 -> 3 merge\n",
+    "# mask = y == 4\n",
+    "# y[mask] = 3\n",
+    "# # UPDRS 0 -> 1 merge\n",
+    "# mask = y == 0\n",
+    "# y[mask] = 1\n",
+    "\n",
+    "lda = LDA()\n",
+    "lda.fit(X, y)\n",
+    "\n",
+    "#Define method to evaluate model\n",
+    "cv = RepeatedStratifiedKFold(n_splits=8, n_repeats=10, random_state=1)\n",
+    "\n",
+    "#evaluate model\n",
+    "scores = cross_val_score(lda, X, y, scoring='accuracy', cv=cv, n_jobs=-1)\n",
+    "print(np.mean(scores)) \n",
+    "print(scores)"
    ]
   },
   {
