--- a/updrsTapping_exploring_features.ipynb
+++ b/updrsTapping_exploring_features.ipynb
@@ -57,11 +57,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python sys 3.9.13 (main, Oct 13 2022, 21:23:06) [MSC v.1916 64 bit (AMD64)]\n",
-      "pandas 1.4.4\n",
-      "numpy 1.23.3\n",
-      "sci-py 1.9.1\n",
-      "sci-kit learn 1.1.2\n"
+      "Python sys 3.9.7 (default, Sep 16 2021, 08:50:36) \n",
+      "[Clang 10.0.0 ]\n",
+      "pandas 1.3.4\n",
+      "numpy 1.20.3\n",
+      "sci-py 1.7.1\n",
+      "sci-kit learn 1.0.1\n"
      ]
     }
    ],
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,16 +134,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "extracting sub BER019 (50 % of BER)\n",
-      "extracting sub BER019 (100 % of BER)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<module 'tap_load_data.tapping_time_detect' from '/Users/jeroenhabets/Research/CHARITE/projects/tapping/code/updrsTapping_repo/tap_load_data/tapping_time_detect.py'>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -169,16 +172,16 @@
     "#     verbose=False,\n",
     "# )\n",
     "\n",
-    "nantest = mainFtExtr.FeatureSet(\n",
-    "    subs_incl = ['BER019', 'BER019'],# 'DUS007'],\n",
-    "    centers_incl = [ 'BER', ],\n",
-    "    verbose=False,\n",
-    ")\n"
+    "# nantest = mainFtExtr.FeatureSet(\n",
+    "#     subs_incl = ['BER019', 'BER019'],# 'DUS007'],\n",
+    "#     centers_incl = [ 'BER', ],\n",
+    "#     verbose=False,\n",
+    "# )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 558,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +196,7 @@
     "# berClass = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_bertest.P'))\n",
     "# dusClass = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_DUS.P'))\n",
     "\n",
-    "ftClass = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_ALL_20221114.P'))"
+    "ftClass = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_ALL_20221123.P'))"
    ]
   },
   {
@@ -205,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,6 +307,27 @@
     "print(f'In {len(np.unique(subs))} unique subjects, {len(ftClass.incl_traces)} tap blocks found')\n",
     "print(f'block durations: {np.mean(block_durations)} +/- {np.std(block_durations)}')\n",
     "print(f'n taps: {np.mean(ntaps)} +/- {np.std(ntaps)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.17857143, 92.89285714])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([91,93, 95, 93, 95, 97, 90, ])\n",
+    "np.polyfit(np.arange(len(a)), a, 1)"
    ]
   },
   {
@@ -504,7 +528,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('retap')",
+   "display_name": "Python 3.9.7 ('ecog_dysk')",
    "language": "python",
    "name": "python3"
   },
@@ -518,12 +542,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f23a308fb4398211655e9950c8371f856de701ec09eac61c96054832e4a49057"
+    "hash": "3215b98ba4c40f90b358cffaa32696e7bfbdbe38275c45cfefc4b84b3a964fcf"
    }
   }
  },
