ENH/FIX: created first step in ensemble, to create clusters based on intra-tap-intervals and freq, included plotting and updrs distribution. Small adjustment to impact finder, tap finding for small tappers can be optmised

--- a/updrsTapping_predictions.ipynb
+++ b/updrsTapping_predictions.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,18 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python sys 3.9.13 (main, Oct 13 2022, 21:23:06) [MSC v.1916 64 bit (AMD64)]\n",
-      "pandas 1.4.4\n",
-      "numpy 1.23.3\n",
-      "sci-py 1.9.1\n",
-      "sci-kit learn 1.1.2\n"
+      "Python sys 3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]\n",
+      "pandas 1.4.3\n",
+      "numpy 1.21.5\n",
+      "sci-py 1.7.3\n",
+      "sci-kit learn 1.1.1\n"
      ]
     }
    ],
@@ -96,26 +96,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# own functions\n",
     "from retap_utils import utils_dataManagement\n",
-    "from tap_extract_fts.main_featExtractionClass import FeatureSet, singleTrace  # for loading of class\n",
     "\n",
     "import tap_predict.tap_pred_prepare as prep_pred\n",
-    "import tap_plotting.retap_plot_clusters as plotClusters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define path with feature class\n",
-    "deriv_path = os.path.join(utils_dataManagement.get_local_proj_dir(), 'data', 'derivatives')\n"
+    "import tap_plotting.retap_plot_clusters as plot_cluster"
    ]
   },
   {
@@ -127,12 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "### IMPORT CREATED CLASSES FROM FILES\n",
-    "ftClass = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_ALL_20221114.P'))"
+    "from tap_extract_fts.main_featExtractionClass import FeatureSet, singleTrace\n",
+    "\n",
+    "# define path with feature class\n",
+    "deriv_path = os.path.join(utils_dataManagement.get_local_proj_dir(), 'data', 'derivatives')\n",
+    "\n",
+    "ftClass = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_ALL_20221214.P'))\n",
+    "ftClass10 = utils_dataManagement.load_class_pickle(os.path.join(deriv_path, 'ftClass_ALL_max10_20221214.P'))"
    ]
   },
   {
@@ -144,30 +139,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['triax_arr', 'fs', 'impacts', 'tapDict', 'updrsSubScore', 'nTaps', 'freq', 'tap_durations', 'intraTapInt', 'tapRMS', 'tapRMSnrm', 'impactRMS', 'raise_velocity', 'jerkiness', 'jerkiness_smooth', 'mean_tapRMSnrm', 'coefVar_tapRMSnrm', 'IQR_tapRMSnrm', 'decr_tapRMSnrm', 'slope_tapRMSnrm', 'mean_raise_velocity', 'coefVar_raise_velocity', 'IQR_raise_velocity', 'decr_raise_velocity', 'slope_raise_velocity', 'mean_intraTapInt', 'coefVar_intraTapInt', 'IQR_intraTapInt', 'decr_intraTapInt', 'slope_intraTapInt', 'mean_jerkiness', 'coefVar_jerkiness', 'IQR_jerkiness', 'decr_jerkiness', 'slope_jerkiness', 'mean_jerkiness_smooth', 'coefVar_jerkiness_smooth', 'IQR_jerkiness_smooth', 'decr_jerkiness_smooth', 'slope_jerkiness_smooth'])"
+       "dict_keys(['triax_arr', 'fs', 'impacts', 'tap_lists', 'max_n_taps_incl', 'updrsSubScore', 'total_nTaps', 'freq', 'tap_durations', 'intraTapInt', 'tapRMS', 'tapRMSnrm', 'impactRMS', 'raise_velocity', 'jerkiness_taps', 'jerkiness_trace', 'mean_tapRMS', 'coefVar_tapRMS', 'IQR_tapRMS', 'decr_tapRMS', 'slope_tapRMS', 'mean_tapRMSnrm', 'coefVar_tapRMSnrm', 'IQR_tapRMSnrm', 'decr_tapRMSnrm', 'slope_tapRMSnrm', 'mean_impactRMS', 'coefVar_impactRMS', 'IQR_impactRMS', 'decr_impactRMS', 'slope_impactRMS', 'mean_raise_velocity', 'coefVar_raise_velocity', 'IQR_raise_velocity', 'decr_raise_velocity', 'slope_raise_velocity', 'mean_intraTapInt', 'coefVar_intraTapInt', 'IQR_intraTapInt', 'decr_intraTapInt', 'slope_intraTapInt', 'mean_jerkiness_taps', 'coefVar_jerkiness_taps', 'IQR_jerkiness_taps', 'decr_jerkiness_taps', 'slope_jerkiness_taps'])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# show all present features\n",
     "vars(ftClass.BER055_M0S0_L_1.fts).keys()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2a. Including ALL features"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "importlib.reload(prep_pred)\n",
+    "\n",
     "traces, feats = prep_pred.select_traces_and_feats(\n",
     "    ftClass,\n",
     "    center='all',\n",
@@ -179,6 +184,134 @@
     "    incl_feats=feats,\n",
     "    to_norm=False,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2b. Ensemble method, start with clustering on intraTapInterval (m and cv) and total-trace-frequency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create matrix to cluster with\n",
+    "\n",
+    "traces_excl = [\n",
+    "    'DUS006_M0S0_L_1',\n",
+    "]\n",
+    "\n",
+    "X = []\n",
+    "y = []\n",
+    "\n",
+    "iti_list = []\n",
+    "freq_list = []\n",
+    "\n",
+    "for trace in ftClass.incl_traces:\n",
+    "    if trace in traces_excl: continue\n",
+    "\n",
+    "    trace = getattr(ftClass, trace)\n",
+    "\n",
+    "    y.append(getattr(trace, 'tap_score'))\n",
+    "\n",
+    "    iti_list.append(getattr(trace.fts, 'intraTapInt'))\n",
+    "    freq_list.append(getattr(trace.fts, 'freq'))\n",
+    "    \n",
+    "X.append(freq_list)  # INCLUDE FREQ (HZ) OF TOTAL TRACE\n",
+    "\n",
+    "mean_iti = [np.nanmean(l) for l in iti_list]\n",
+    "cv_iti = [scipy.stats.variation(l) for l in iti_list]\n",
+    "X.append(mean_iti)  # INCLUDE MEAN OF INTRA-TAP-INTERVAL\n",
+    "X.append(cv_iti)  # INCLUDE COEF OF VAR OF INTRA-TAP-INTERVAL\n",
+    "\n",
+    "y = np.array([y]).T\n",
+    "X = np.array(X).T\n",
+    "\n",
+    "## MASKING BCS TOO LOW NUMBERS\n",
+    "# UPDRS 4 -> 3 merge (4: n=3)\n",
+    "mask = y == 4\n",
+    "y[mask] = 3\n",
+    "\n",
+    "# # UPDRS 0 -> 1 merge (0: n=40)\n",
+    "# mask = y == 0\n",
+    "# y[mask] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\habetsj\\Anaconda3\\envs\\ultraleap\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1332: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=2.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "importlib.reload(plot_cluster)\n",
+    "\n",
+    "n_clusters = 2\n",
+    "\n",
+    "y_clust, centr_clust, _ = plot_cluster.get_kMeans_clusters(\n",
+    "    X=X,\n",
+    "    n_clusters=n_clusters,\n",
+    "    use_pca=True,\n",
+    "    z_score=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "traces, feats = prep_pred.select_traces_and_feats(\n",
+    "    ftClass, use_sel_fts=True,\n",
+    ")\n",
+    "X, y = prep_pred.create_X_y_vectors(\n",
+    "    ftClass,\n",
+    "    incl_traces=traces,\n",
+    "    incl_feats=feats,\n",
+    "    to_norm=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(376, 15) (376,) (376,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\n",
+    "    X.shape, y.shape, y_clust.shape\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### next steps:\n",
+    "- split X and y in two groups based on clusters\n",
+    "- test default ML modeling on both groups"
    ]
   },
   {
@@ -807,7 +940,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('retap')",
+   "display_name": "Python 3.9.12 ('ultraleap')",
    "language": "python",
    "name": "python3"
   },
@@ -821,12 +954,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f23a308fb4398211655e9950c8371f856de701ec09eac61c96054832e4a49057"
+    "hash": "ec69415375fc343f73860bd27e00fe01311a25a0ec3cc4b8c97ec57f9adf05ee"
    }
   }
  },
